# Rust_API

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/controller/: mod.rs  todo_controller.rs  user_controller.rs
src/database/: db.rs
src/middleware/: auth.rs  mod.rs  not_found.rs
src/model/: mod.rs  todo_model.rs  user_model.rs
src/routes/: router.rs
src/service/: mod.rs  todo_service.rs  user_service.rs
src/utils/: error.rs  password_validation.rs
