[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
mongodb = "2.6.0"
serde = "1.0.203"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
futures = "0.3"
bcrypt = "0.13"
regex = "1.5"
once_cell = "1.5"
thiserror = "1.0"
jsonwebtoken = "8.0"
chrono = "0.4"
actix-web-httpauth = "0.8.0"
futures-util = "0.3"